<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9DEC9"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#3D0C11"
        />
    <View
        android:id="@+id/image_remov"
        android:layout_width="76dp"
        android:layout_height="74dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="13dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/image_remov"
        />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:background="#D80032" />
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="294dp"
        android:layout_height="109dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:background="#99D9D9D9"
        />

    <TextView
        android:id="@+id/muntinlupa_"
        android:layout_width="227dp"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/muntinlupa_"
        android:textAppearance="@style/muntinlupa_"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="242dp"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/please_ente"
        android:layout_width="274dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="341dp"
        android:gravity="top"
        android:text="@string/please_ente"
        android:textAppearance="@style/please_ente" />


    <TextView
        android:id="@+id/enter_email"
        android:layout_width="79dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="403dp"
        android:gravity="top"
        android:text="@string/enter_email"
        android:textAppearance="@style/enter_email" />

    <TextView
        android:id="@+id/enter_passw"
        android:layout_width="101dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="462dp"
        android:gravity="top"
        android:text="@string/enter_passw"
        android:textAppearance="@style/enter_passw" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="385dp"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="12sp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="449dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="12sp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="518dp"
        android:text="Login" />

    <Button
        android:id="@+id/btnGoToEnrollment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="100dp"
        android:text="Go to Enlist" />
    <Button
        android:id="@+id/btnGoToAnnouncement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnGoToEnrollment"
        android:layout_marginTop="20dp"
        android:text="Go to Announcement" />
</RelativeLayout>

